[metadata]
name = narupatools
version = 0.2.0
author = 'Alex Jamieson-Binnie'
author_email = alexjbinnie@alexjbinnie.com
description = Tools and extensions for Narupa
long_description = file: README.md, CHANGELOG, LICENSE
long_description_content_type = text/markdown
url = https://github.com/alexjbinnie/narupatools
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/alexjbinnie/narupatools/issues
    Changelog = https://github.com/alexjbinnie/narupatools/blob/main/narupatools/CHANGELOG

[options]
packages = find:
package_dir =
    =src
include-package-data = True
python_requires = >=3.8
install_requires =
    ase>=3.21
    openmm>=7.2.0
    numpy>=1.20.0
    infinite-sets>=1.0.1
    lxml>=4.6.3

[options.package_data]
narupatools = py.typed

[options.packages.find]
where = src
include = narupatools*

[tool:pytest]
minversion=6.0
testpaths=tests
timeout=20
faulthandler_timeout=25
markers =
    openmm: Uses OpenMM.
    lammps: Uses LAMMPS.
    converter: Checks conversions.
    dynamics: Runs dynamics.